# ColAG

./: .gitignore  README.md  index.html  run.sh
.github/workflows/: page.yaml
Air_ws/src/custom_msgs/: package.xml
Air_ws/src/custom_msgs/msg/: map_info.msg
Air_ws/src/planner/bspline_opt/src/: bspline_optimizer.cpp
Air_ws/src/planner/drone_detect/src/: drone_detector.cpp
Air_ws/src/planner/plan_env/: CMakeLists.txt  package.xml
Air_ws/src/planner/plan_env/launch/: plan_env.launch
Air_ws/src/planner/plan_env/src/: grid_map.cpp  grid_map_sendfree.cpp  grid_map_sendpoint.cpp  tobe_grid.cpp
Air_ws/src/planner/plan_manage/: CMakeLists.txt
Air_ws/src/planner/plan_manage/launch/: advanced_param.xml  default.rviz  run_in_sim.launch  swarm_sim.launch
Air_ws/src/planner/plan_manage/src/: ego_replan_fsm.cpp  planner_manager.cpp  traj_server.cpp  ugv_serve_plan.cpp
Air_ws/src/swarm_bridge/: CMakeLists.txt
Air_ws/src/swarm_bridge/include/swarm_bridge/: reliable_bridge.hpp
Air_ws/src/swarm_bridge/launch/: bridge_udp.launch
Air_ws/src/swarm_bridge/src/: bridge_tcp_node.cpp  bridge_udp_node.cpp
Air_ws/src/swarm_support/: CMakeLists.txt  package.xml
Air_ws/src/swarm_support/launch/: guide_plan.launch
Air_ws/src/swarm_support/scripts/: guide_plan.py
Air_ws/src/uav_controller/config/: ctrl_param_fpv.yaml
Air_ws/src/uav_controller/launch/: run_ctrl.launch
Air_ws/src/uav_simulator/fake_drone/src/: poscmd_2_odom.cpp
Air_ws/src/uav_simulator/local_sensing/src/: pointcloud_render_node.cpp
Air_ws/src/uav_simulator/so3_control/src/: control_example.cpp
Ground_ws/src/custom_msgs/: CMakeLists.txt
Ground_ws/src/custom_msgs/msg/: blind_info.msg  map_info.msg
Ground_ws/src/planner/bspline_opt/src/: bspline_optimizer.cpp  uniform_bspline.cpp
Ground_ws/src/planner/collision_detect/: CMakeLists.txt  package.xml
Ground_ws/src/planner/collision_detect/include/: CollisionDetect.h
Ground_ws/src/planner/plan_env/: CMakeLists.txt  package.xml
Ground_ws/src/planner/plan_manage/: CMakeLists.txt  package.xml
Ground_ws/src/swarm_bridge/: package.xml
Ground_ws/src/swarm_bridge/launch/: bridge_tcp.launch
Ground_ws/src/swarm_bridge/rviz_config/: receive_map.rviz
Ground_ws/src/swarm_bridge/src/: bridge_tcp_node.cpp  bridge_udp_node.cpp
Ground_ws/src/swarm_posefusion/: CMakeLists.txt  package.xml
Ground_ws/src/swarm_posefusion/config/: extrinsic.md  init_param.yaml  rviz.rviz
Ground_ws/src/swarm_posefusion/launch/: odomfusion.launch  swarm_fusion.launch  truth_relative.launch
Ground_ws/src/swarm_posefusion/src/: pose_addition.cpp  swarm_posefusion_node.cpp  swarm_posefusion_solver.cpp  true_relative.cpp
Ground_ws/src/ugv_controller/: CMakeLists.txt  package.xml
Ground_ws/src/ugv_controller/config/: param.yaml
Ground_ws/src/ugv_controller/include/: mpc.h
Ground_ws/src/ugv_controller/include/mpc_utils/: traj_anal.hpp
Ground_ws/src/ugv_controller/launch/: test_mpc.launch  traj_mpc.launch
Ground_ws/src/ugv_controller/rviz/: default.rviz
Ground_ws/src/ugv_controller/src/: cubic_spline_planner.cpp  mpc.cpp  mpc_node.cpp
Ground_ws/src/ugv_simulator/fake_car/: CMakeLists.txt  package.xml
Ground_ws/src/ugv_simulator/fake_car/launch/: car_sim.launch  fake_car.launch  rviz.launch
Ground_ws/src/ugv_simulator/fake_car/launch/include/: default.rviz
Ground_ws/src/ugv_simulator/fake_car/msg/: IDodom.msg  IDpose.msg
Ground_ws/src/ugv_simulator/fake_car/src/: fake_car.cpp
Ground_ws/src/ugv_simulator/fake_crepes/: CMakeLists.txt  package.xml
Ground_ws/src/ugv_simulator/sim_map/: CMakeLists.txt  package.xml
static/css/: index.css
(+56 files in other folders)
